--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <li><a href="https://arxiv.org/abs/2311.09828" target="_blank">AfriMTE & AfriCOMET: Empowering COMET for African Languages. arXiv 2023.</a></li>
       <li><a href="https://arxiv.org/abs/2304.09972" target="_blank">MASAKHANEWS: News Topic Classification for African Languages. AfricaNLP @ ICLR 2023.</a></li>
       <li><a href="http://arxiv.org/abs/2308.13497" target="_blank">Ngambay–French Neural Machine Translation. NLP4TIA @ RANLP 2023.</a></li>
-      <li><a href="https://arxiv.org/abs/2308.13497" target="_blank">Error-Correction DNNs for South African Wildlife-Vehicle Collision Data. MDPI 2022.</a></li>
+      <li><a href="https://www.mdpi.com/2227-7390/10/21/3988" target="_blank">Error-Correction DNNs for South African Wildlife-Vehicle Collision Data. MDPI 2022.</a></li>
     </ul>
       <p style='margin-top:1rem;'>
       <a href="https://scholar.google.com/citations?user=uKClSfsAAAAJ&hl=en" target="_blank" style="display:inline-block; padding:0.6rem 1.2rem; background:#2c5364; color:white; border-radius:5px; text-decoration:none; font-weight:500;">View All Publications</a>
